@@ -2,6 +2,12 @@ $Id$
 
 NEWS for SoftHSM -- History of user visible changes
 
+SoftHSM trunk - 2010-0X-XX
+
+* Respect --disable-64bit
+* Respect $DESTDIR for config files
+
+
 SoftHSM 1.1.3 - 2010-01-25
 
 * Only check for the SQLite3 library. The binary is not needed.
